--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@ngneat/transloco": "^4.1.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.1.81",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.2",
-    "@angular/cli": "~15.0.2",
+    "@angular/cli": "^15.0.2",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/pdfjs-dist": "^2.10.378",
