--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ngneat/elf-entities": "^4.4.3",
     "@ngneat/transloco": "^4.1.1",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^3.1.81",
+    "pdfjs-dist": "~3.1.0",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -34,7 +34,6 @@
     "@angular/cli": "^15.0.2",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
-    "@types/pdfjs-dist": "^2.10.378",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
