--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "dom"
     ],
     "paths": {
-      "@shared/*": ["src/shared/*"]
+      "@app/*": ["src/app/*"]
     }
   },
   "angularCompilerOptions": {
