--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/cdk": "^15.2.0",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/material": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular/animations": "^16.0.0-rc.2",
+    "@angular/cdk": "^16.0.0-rc.1",
+    "@angular/common": "^16.0.0-rc.2",
+    "@angular/compiler": "^16.0.0-rc.2",
+    "@angular/core": "^16.0.0-rc.2",
+    "@angular/forms": "^16.0.0-rc.2",
+    "@angular/material": "^16.0.0-rc.1",
+    "@angular/platform-browser": "^16.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "^16.0.0-rc.2",
+    "@angular/router": "^16.0.0-rc.2",
     "@ngneat/elf": "^2.3.0",
     "@ngneat/elf-entities": "^4.4.3",
     "@ngneat/transloco": "^4.1.1",
@@ -32,11 +32,11 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.0",
-    "@angular/cli": "^15.2.0",
-    "@angular/compiler-cli": "^15.2.0",
+    "@angular-devkit/build-angular": "^16.0.0-rc.1",
+    "@angular/cli": "^16.0.0-rc.1",
+    "@angular/compiler-cli": "^16.0.0-rc.2",
     "@fontsource/material-icons": "^4.5.4",
     "@fontsource/roboto": "^4.5.8",
-    "typescript": "~4.9.0"
+    "typescript": "~5.0.0"
   }
 }
