💚 force ci install

--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm ci
+          npm ci --force
           npm run build
 
       - name: Deploy
