--- a/package.json
+++ b/package.json
@@ -10,33 +10,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@ngneat/elf": "^2.3.0",
+    "@angular/animations": "^17.0.0-next.8",
+    "@angular/cdk": "^17.0.0-next.6",
+    "@angular/common": "^17.0.0-next.8",
+    "@angular/compiler": "^17.0.0-next.8",
+    "@angular/core": "^17.0.0-next.8",
+    "@angular/forms": "^17.0.0-next.8",
+    "@angular/material": "^17.0.0-next.6",
+    "@angular/platform-browser": "^17.0.0-next.8",
+    "@angular/platform-browser-dynamic": "^17.0.0-next.8",
+    "@angular/router": "^17.0.0-next.8",
+    "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-entities": "^4.4.3",
-    "@ngneat/transloco": "^5.0.1",
+    "@ngneat/transloco": "^6.0.0",
     "angular-mixed-cdk-drag-drop": "^2.0.0",
     "data-transfer-helper": "^1.0.2",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "~3.1.0",
     "rxjs": "^7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
+    "@angular-devkit/build-angular": "^17.0.0-next.8",
+    "@angular/cli": "^17.0.0-next.8",
+    "@angular/compiler-cli": "^17.0.0-next.8",
     "@fontsource/material-icons": "^4.5.4",
     "@fontsource/roboto": "^5.0.0",
-    "typescript": "~5.1.0"
+    "typescript": "~5.2.2"
   }
 }
