--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "_enabledBlockTypes": [
+      "if", "switch", "for"
+    ]
   }
 }
