--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0-next.8",
-    "@angular/cdk": "^17.0.0-next.7",
-    "@angular/common": "^17.0.0-next.8",
-    "@angular/compiler": "^17.0.0-next.8",
-    "@angular/core": "^17.0.0-next.8",
-    "@angular/forms": "^17.0.0-next.8",
-    "@angular/material": "^17.0.0-next.7",
-    "@angular/platform-browser": "^17.0.0-next.8",
-    "@angular/platform-browser-dynamic": "^17.0.0-next.8",
-    "@angular/router": "^17.0.0-next.8",
+    "@angular/animations": "^17.0.0-rc.0",
+    "@angular/cdk": "^17.0.0-rc.0",
+    "@angular/common": "^17.0.0-rc.0",
+    "@angular/compiler": "^17.0.0-rc.0",
+    "@angular/core": "^17.0.0-rc.0",
+    "@angular/forms": "^17.0.0-rc.0",
+    "@angular/material": "^17.0.0-rc.0",
+    "@angular/platform-browser": "^17.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^17.0.0-rc.0",
+    "@angular/router": "^17.0.0-rc.0",
     "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-entities": "^4.4.3",
     "@ngneat/transloco": "^6.0.0",
@@ -32,9 +32,9 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-next.9",
-    "@angular/cli": "^17.0.0-next.9",
-    "@angular/compiler-cli": "^17.0.0-next.8",
+    "@angular-devkit/build-angular": "^17.0.0-rc.0",
+    "@angular/cli": "^17.0.0-rc.0",
+    "@angular/compiler-cli": "^17.0.0-rc.0",
     "@fontsource/material-icons": "^5.0.7",
     "@fontsource/roboto": "^5.0.0",
     "typescript": "~5.2.2"
