--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@angular/service-worker": "^17.0.0",
     "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-entities": "^4.4.3",
     "@ngneat/transloco": "^6.0.0",
