--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
             "outputPath": "dist/pdf-tools",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "server": "src/main.server.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
@@ -28,7 +29,8 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "prerender": true
           },
           "configurations": {
             "production": {
