--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/material": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
+    "@angular/platform-server": "^17.0.5",
     "@angular/router": "^17.0.0",
+    "@angular/ssr": "^17.0.5",
     "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-entities": "^4.4.3",
     "@ngneat/transloco": "^6.0.0",
