update to angular 18 rc

--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/cdk": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/material": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
-    "@angular/service-worker": "^17.3.0",
+    "@angular/animations": "^18.0.0-next",
+    "@angular/cdk": "^18.0.0-next",
+    "@angular/common": "^18.0.0-next",
+    "@angular/compiler": "^18.0.0-next",
+    "@angular/core": "^18.0.0-next",
+    "@angular/forms": "^18.0.0-next",
+    "@angular/material": "^18.0.0-next",
+    "@angular/platform-browser": "^18.0.0-next",
+    "@angular/platform-browser-dynamic": "^18.0.0-next",
+    "@angular/router": "^18.0.0-next",
+    "@angular/service-worker": "^18.0.0-next",
     "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-entities": "^5.0.0",
     "@ngneat/transloco": "^6.0.0",
@@ -33,9 +33,9 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.0",
-    "@angular/cli": "^17.3.0",
-    "@angular/compiler-cli": "^17.3.0",
+    "@angular/build": "^18.0.0-rc.2",
+    "@angular/cli": "^18.0.0-next",
+    "@angular/compiler-cli": "^18.0.0-next",
     "@fontsource/material-icons": "^5.0.7",
     "@fontsource/roboto": "^5.0.0",
     "typescript": "~5.4.0"
