--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,12 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular/build:extract-i18n",
+          "options": {
+            "buildTarget": "pdf-tools:build"
+          }
         }
       }
     }
