--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/service-worker": "^18.0.0",
+    "@jsverse/transloco": "^7.4.1",
     "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-entities": "^5.0.0",
-    "@ngneat/transloco": "^6.0.0",
     "angular-mixed-cdk-drag-drop": "^2.0.0",
     "data-transfer-helper": "^1.0.2",
     "pdf-lib": "^1.17.1",
