build: use npm install instead of ci

--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Setup-Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22"
 
       - name: Install and Build
         run: |
-          npm ci --force
+          npm install
           npm run build
 
       - name: Deploy
