--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0-rc.3",
-    "@angular/cdk": "^19.0.0-rc.3",
-    "@angular/common": "^19.0.0-rc.3",
-    "@angular/compiler": "^19.0.0-rc.3",
-    "@angular/core": "^19.0.0-rc.3",
-    "@angular/forms": "^19.0.0-rc.3",
-    "@angular/material": "^19.0.0-rc.3",
-    "@angular/platform-browser": "^19.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "^19.0.0-rc.3",
-    "@angular/router": "^19.0.0-rc.3",
-    "@angular/service-worker": "^19.0.0-rc.3",
+    "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/material": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "@jsverse/transloco": "^7.4.1",
     "@ngneat/elf": "^2.4.0",
     "@ngneat/elf-entities": "^5.0.0",
@@ -32,9 +32,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^19.0.0-rc.2",
-    "@angular/cli": "^19.0.0-rc.2",
-    "@angular/compiler-cli": "^19.0.0-rc.3",
+    "@angular/build": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
     "@fontsource/material-icons": "^5.0.7",
     "@fontsource/roboto": "^5.0.0",
     "typescript": "~5.6.0"
